--- a/LEMP/templates/virtualhost.conf.j2
+++ b/LEMP/templates/virtualhost.conf.j2
@@ -10,7 +10,7 @@ server {
              index index.php index.html index.htm;
 
              location / {
-                try_files $uri $uri/ /index.php?q=$uri&$args;
+                try_files $uri $uri/ /forum/app.php$is_args$args;
              }
 
              error_page 404 /404.html;
